[package]
name = "mqtt-bench"
version = "0.1.0"
edition = "2021"
description = "MQTT broker benchmarking tool"
license = "MIT"

[dependencies]
# Core runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# MQTT client
rumqttc = "0.24"

# Metrics & Histograms
hdrhistogram = "7"
parking_lot = "0.12"

# Concurrency
crossbeam-channel = "0.5"

# CLI & Output
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

# Docker API
bollard = "0.16"

# Database
duckdb = { version = "1", features = ["bundled"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
humantime = "2"
futures = "0.3"
hostname = "0.4"
num_cpus = "1"

# Web server for viewer
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
open = "5"
mime_guess = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
